--- a/neighbours.ipynb
+++ b/neighbours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "users = pd.read_csv(r\"D:\\dataset\\encoding\\user_frame.csv\")\n",
     "user_vectors = pd.read_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\")\n",
-    "rating_vectors = pd.read_csv(r\"D:\\dataset\\encoding\\ratings_frame.csv\")"
+    "ratings = pd.read_csv(r\"D:\\dataset\\encoding\\ratings_frame.csv\")"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -166,124 +166,45 @@
        "      <td>['Action', 'Shounen', 'Comedy']</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3507</th>\n",
-       "      <td>1263323</td>\n",
-       "      <td>mzpasaway13</td>\n",
-       "      <td>86</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>4150</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Action', 'Comedy', 'Shounen']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3037</th>\n",
-       "      <td>22536</td>\n",
-       "      <td>nawara</td>\n",
-       "      <td>49</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1984</td>\n",
-       "      <td>3257</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Comedy', 'Shounen', 'Action']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4223</th>\n",
-       "      <td>440913</td>\n",
-       "      <td>ninaka</td>\n",
-       "      <td>272</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>5788</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Comedy', 'Shounen', 'Action']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6068</th>\n",
-       "      <td>446074</td>\n",
-       "      <td>shirah0shi</td>\n",
-       "      <td>137</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>4640</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Action', 'Comedy', 'Shounen']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4301</th>\n",
-       "      <td>158358</td>\n",
-       "      <td>chibi_miyavi</td>\n",
-       "      <td>137</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>3561</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Comedy', 'Shounen', 'Action']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "      user_id      username user_completed experience  gender birth_date  \\\n",
-       "0     2255153  karthiga      49             Active     Female  1990        \n",
-       "68    502880   lila94        89             Active     Female  1994        \n",
-       "416   2120443  hana_haruka   110            Active     Female  1993        \n",
-       "3962  71147    gosakurago    86             Active     Female  1994        \n",
-       "3132  487038   gorankudasai  144            Active     Female  1992        \n",
-       "3507  1263323  mzpasaway13   86             Active     Female  1994        \n",
-       "3037  22536    nawara        49             Active     Female  1984        \n",
-       "4223  440913   ninaka        272            Active     Female  1992        \n",
-       "6068  446074   shirah0shi    137            Active     Female  1991        \n",
-       "4301  158358   chibi_miyavi  137            Active     Female  1992        \n",
+       "0     2255153      karthiga             49     Active  Female       1990   \n",
+       "68     502880        lila94             89     Active  Female       1994   \n",
+       "416   2120443   hana_haruka            110     Active  Female       1993   \n",
+       "3962    71147    gosakurago             86     Active  Female       1994   \n",
+       "3132   487038  gorankudasai            144     Active  Female       1992   \n",
        "\n",
        "     stats_episodes  generation                       fav_genres  \\\n",
-       "0     3391           Millenials  ['Comedy', 'Action', 'Shounen']   \n",
-       "68    4204           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
-       "416   4062           Millenials  ['Action', 'Shounen', 'Comedy']   \n",
-       "3962  3329           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
-       "3132  3513           Millenials  ['Action', 'Shounen', 'Comedy']   \n",
-       "3507  4150           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
-       "3037  3257           Millenials  ['Comedy', 'Shounen', 'Action']   \n",
-       "4223  5788           Millenials  ['Comedy', 'Shounen', 'Action']   \n",
-       "6068  4640           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
-       "4301  3561           Millenials  ['Comedy', 'Shounen', 'Action']   \n",
+       "0              3391  Millenials  ['Comedy', 'Action', 'Shounen']   \n",
+       "68             4204  Millenials  ['Action', 'Comedy', 'Shounen']   \n",
+       "416            4062  Millenials  ['Action', 'Shounen', 'Comedy']   \n",
+       "3962           3329  Millenials  ['Action', 'Comedy', 'Shounen']   \n",
+       "3132           3513  Millenials  ['Action', 'Shounen', 'Comedy']   \n",
        "\n",
        "     fav_anime_period  \n",
-       "0     Classic          \n",
-       "68    Classic          \n",
-       "416   Classic          \n",
-       "3962  Classic          \n",
-       "3132  Classic          \n",
-       "3507  Classic          \n",
-       "3037  Classic          \n",
-       "4223  Classic          \n",
-       "6068  Classic          \n",
-       "4301  Classic          "
+       "0             Classic  \n",
+       "68            Classic  \n",
+       "416           Classic  \n",
+       "3962          Classic  \n",
+       "3132          Classic  "
       ]
      },
-     "execution_count": 246,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def neighbours():#function that returns a list of indexes of most similar users in \"final_arrays\" array\n",
+    "#function that returns a list of indexes of most similar users in \"final_arrays\" array\n",
+    "def neighbours():\n",
     "    user = np.array([7537,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,0,1,0,0,0,0,0,0,0,0,0,0,0,0])\n",
-    "    nc = NearestNeighbors(n_neighbors = 10, metric=\"cosine\") #euclidean\n",
-    "    \n",
-    "    train = nc.fit(final_arrays)\n",
+    "    nc = NearestNeighbors(n_neighbors = 5, metric=\"cosine\") #euclidean\n",
+    "    #maybe add some weightings\n",
+    "    train = nc.fit(final_arrays) #fit the model with the user vector data\n",
     "    n = train.kneighbors([user], return_distance=False)\n",
     "    return n\n",
     "\n",
@@ -306,6 +227,51 @@
     "\n",
     "\n",
     "#(final_vectors.columns)    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create anime recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kamisama Hajimemashita',\n",
+       " 'Katekyo Hitman Reborn!',\n",
+       " 'Gintama&#039;: Enchousen',\n",
+       " 'Ano Hi Mita Hana no Namae wo Bokutachi wa Mada Shiranai.',\n",
+       " 'Mononoke Hime']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "#Put anime that have most members at the top of each users \"lists\"\n",
+    "def recommendations(neighbours):\n",
+    "    #Get top rated show from each user\n",
+    "    suggestions = [] #anime_id's of recommended anime\n",
+    "    for i in neighbours[\"username\"]:\n",
+    "        user_ratings = ratings.loc[ratings[\"username\"]==i]\n",
+    "        top_rated = user_ratings.iloc[0][\"title\"]\n",
+    "        suggestions.append(top_rated)\n",
+    "        #print(top_rated)\n",
+    "    return suggestions\n",
+    "\n",
+    "recommendations(neighbour_frame)\n",
+    "#ratings"
    ]
   },
   {
