Added option to choose TV/Movie recommendations

--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -740,7 +740,7 @@
     "    for x, y in user_genres.iterrows():\n",
     "        user_row = user_cols.loc[user_cols[\"username\"] == y[\"username\"]]\n",
     "        #print(y)\n",
-    "\n",
+    "        #encode each of the three favourite genres with value: 1\n",
     "        user_row[y[\"fav_genres\"][0]] = 1\n",
     "        user_row[y[\"fav_genres\"][1]] = 1\n",
     "        user_row[y[\"fav_genres\"][2]] = 1\n",
