--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "[3507 rows x 11 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,15 +431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found at position: 36, count: 198\n",
-      "Found at position: 87, count: 127\n",
+      "Found at position: 36, count: 236\n",
+      "Found at position: 87, count: 162\n",
       "num favourites: 9302 9302\n",
       "9302\n"
      ]
@@ -527,7 +527,7 @@
        "      <td>1988</td>\n",
        "      <td>7447</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Action, Power, Super]</td>\n",
+       "      <td>[Action, Super, Power]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -540,7 +540,7 @@
        "      <td>1992</td>\n",
        "      <td>39703</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Action, Sci-Fi, Historical]</td>\n",
+       "      <td>[Action, Comedy, Sci-Fi]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -566,7 +566,7 @@
        "      <td>1993</td>\n",
        "      <td>10701</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Ecchi, Comedy, Action]</td>\n",
+       "      <td>[Comedy, Ecchi, Action]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -644,10 +644,10 @@
        "0               3391  Millenials        [Comedy, Action, Shounen]   \n",
        "1               4903  Millenials          [Drama, Action, Sci-Fi]   \n",
        "2               9701  Millenials        [Comedy, Romance, School]   \n",
-       "3               7447  Millenials           [Action, Power, Super]   \n",
-       "4              39703  Millenials     [Action, Sci-Fi, Historical]   \n",
+       "3               7447  Millenials           [Action, Super, Power]   \n",
+       "4              39703  Millenials         [Action, Comedy, Sci-Fi]   \n",
        "...              ...         ...                              ...   \n",
-       "9297           10701  Millenials          [Ecchi, Comedy, Action]   \n",
+       "9297           10701  Millenials          [Comedy, Ecchi, Action]   \n",
        "9298           11192       Gen Z   [Action, Supernatural, Comedy]   \n",
        "9299           13168  Millenials      [Comedy, Adventure, Action]   \n",
        "9300             662  Millenials       [Comedy, Drama, Adventure]   \n",
@@ -669,7 +669,7 @@
        "[9302 rows x 10 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
