Removed "Mild Nudity" anime and re-wrote embedding

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3887\n"
+      "3613\n"
      ]
     }
    ],
    "source": [
-    "af = af.loc[af[\"type\"].isin([\"TV\",\"Movie\"]) & (af[\"rating\"]!=\"Rx - Hentai\")] #only include TV shows and Movies and remove nsfw shows\n",
+    "af = af.loc[af[\"type\"].isin([\"TV\",\"Movie\"]) & (~af[\"rating\"].isin([\"Rx - Hentai\", \"R+ - Mild Nudity\"]))] #only include TV shows and Movies and remove nsfw shows\n",
     "uf = users.loc[:, [\"user_id\", \"username\", \"user_completed\", \"user_days_spent_watching\", \"gender\", \"birth_date\", \"stats_episodes\"]]\n",
     "uf[\"birth_date\"] = pd.to_datetime(uf[\"birth_date\"])\n",
     "print(len(af))\n",
@@ -73,18 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3507\n",
-      "0.25      6819.0\n",
-      "0.50     27115.0\n",
-      "0.75     89079.5\n",
-      "0.90    211276.0\n",
+      "3240\n",
+      "0.25      6275.25\n",
+      "0.50     25396.00\n",
+      "0.75     84522.75\n",
+      "0.90    203026.40\n",
       "Name: members, dtype: float64\n"
      ]
     },
@@ -279,7 +279,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3507 rows × 11 columns</p>\n",
+       "<p>3240 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -335,10 +335,10 @@
        "6618     Classic      unknown  \n",
        "6620     New-Gen        niche  \n",
        "\n",
-       "[3507 rows x 11 columns]"
+       "[3240 rows x 11 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,15 +431,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found at position: 36, count: 236\n",
-      "Found at position: 87, count: 162\n",
+      "Found at position: 118, count: 261\n",
+      "Found at position: 136, count: 152\n",
       "num favourites: 9302 9302\n",
       "9302\n"
      ]
@@ -488,7 +488,7 @@
        "      <td>1990</td>\n",
        "      <td>3391</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Action, Shounen]</td>\n",
+       "      <td>[Comedy, Shoujo, Romance]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -501,7 +501,7 @@
        "      <td>1991</td>\n",
        "      <td>4903</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Drama, Action, Sci-Fi]</td>\n",
+       "      <td>[Action, Drama, Comedy]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -514,7 +514,7 @@
        "      <td>1990</td>\n",
        "      <td>9701</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Romance, School]</td>\n",
+       "      <td>[Comedy, School, Drama]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -566,7 +566,7 @@
        "      <td>1993</td>\n",
        "      <td>10701</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Ecchi, Action]</td>\n",
+       "      <td>[Romance, Fantasy, School]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -592,7 +592,7 @@
        "      <td>1986</td>\n",
        "      <td>13168</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Adventure, Action]</td>\n",
+       "      <td>[Action, Adventure, Comedy]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -618,7 +618,7 @@
        "      <td>1995</td>\n",
        "      <td>14012</td>\n",
        "      <td>Gen Z</td>\n",
-       "      <td>[Supernatural, Mystery, Action]</td>\n",
+       "      <td>[Supernatural, Comedy, Drama]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -640,18 +640,18 @@
        "9300    25554     winry-chan               7    Regular  Female        1994   \n",
        "9301  4091949      badking95            1101    Veteran    Male        1995   \n",
        "\n",
-       "      stats_episodes  generation                       fav_genres  \\\n",
-       "0               3391  Millenials        [Comedy, Action, Shounen]   \n",
-       "1               4903  Millenials          [Drama, Action, Sci-Fi]   \n",
-       "2               9701  Millenials        [Comedy, Romance, School]   \n",
-       "3               7447  Millenials           [Action, Super, Power]   \n",
-       "4              39703  Millenials         [Action, Comedy, Sci-Fi]   \n",
-       "...              ...         ...                              ...   \n",
-       "9297           10701  Millenials          [Comedy, Ecchi, Action]   \n",
-       "9298           11192       Gen Z   [Action, Supernatural, Comedy]   \n",
-       "9299           13168  Millenials      [Comedy, Adventure, Action]   \n",
-       "9300             662  Millenials       [Comedy, Drama, Adventure]   \n",
-       "9301           14012       Gen Z  [Supernatural, Mystery, Action]   \n",
+       "      stats_episodes  generation                      fav_genres  \\\n",
+       "0               3391  Millenials       [Comedy, Shoujo, Romance]   \n",
+       "1               4903  Millenials         [Action, Drama, Comedy]   \n",
+       "2               9701  Millenials         [Comedy, School, Drama]   \n",
+       "3               7447  Millenials          [Action, Super, Power]   \n",
+       "4              39703  Millenials        [Action, Comedy, Sci-Fi]   \n",
+       "...              ...         ...                             ...   \n",
+       "9297           10701  Millenials      [Romance, Fantasy, School]   \n",
+       "9298           11192       Gen Z  [Action, Supernatural, Comedy]   \n",
+       "9299           13168  Millenials     [Action, Adventure, Comedy]   \n",
+       "9300             662  Millenials      [Comedy, Drama, Adventure]   \n",
+       "9301           14012       Gen Z   [Supernatural, Comedy, Drama]   \n",
        "\n",
        "     fav_anime_period  \n",
        "0             Classic  \n",
@@ -669,7 +669,7 @@
        "[9302 rows x 10 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
