rating_matrix completed (unverified)

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -728,7 +728,7 @@
     "valid_tv_shows = merge_rf[(merge_rf[\"type\"]==\"TV\") & (merge_rf[\"my_watched_episodes\"]>=10)]\n",
     "merge_rf = pd.concat([movies, valid_tv_shows])\n",
     "collab_frame = merge_rf.copy()\n",
-    "print(collab_frame.columns)\n",
+    "\n",
     "merge_rf = merge_rf.loc[:, [\"username\", \"anime_id\",\"title\",\"genre\",\"type\", \"my_score\",\"my_watched_episodes\", \"aired_from_year\", \"time_period\"]]\n",
     "#Sort by highest rated anime by each user\n",
     "merge_rf.set_index(\"username\")\n",
@@ -832,9 +832,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>username</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>type</th>\n",
+       "      <th>my_score</th>\n",
+       "      <th>my_watched_episodes</th>\n",
+       "      <th>aired_from_year</th>\n",
+       "      <th>time_period</th>\n",
+       "      <th>mean_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>--FallenAngel--</td>\n",
+       "      <td>164</td>\n",
+       "      <td>Mononoke Hime</td>\n",
+       "      <td>[Action,  Adventure,  Fantasy]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>--FallenAngel--</td>\n",
+       "      <td>5507</td>\n",
+       "      <td>Senjou no Valkyria</td>\n",
+       "      <td>[Action,  Military,  Romance]</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>--FallenAngel--</td>\n",
+       "      <td>585</td>\n",
+       "      <td>Mimi wo Sumaseba</td>\n",
+       "      <td>[Slice of Life,  Drama,  Romance,  Shoujo]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>--FallenAngel--</td>\n",
+       "      <td>513</td>\n",
+       "      <td>Tenkuu no Shiro Laputa</td>\n",
+       "      <td>[Adventure,  Fantasy,  Romance,  Sci-Fi]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>--FallenAngel--</td>\n",
+       "      <td>10800</td>\n",
+       "      <td>Chihayafuru</td>\n",
+       "      <td>[Drama,  Game,  Josei,  School,  Slice of Life...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>New-Gen</td>\n",
+       "      <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1626915</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>Black Blood Brothers</td>\n",
+       "      <td>[Action,  Comedy,  Fantasy,  Shounen,  Superna...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1626916</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>Digimon Adventure 02</td>\n",
+       "      <td>[Action,  Adventure,  Comedy,  Drama,  Fantasy...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>6</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1626917</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>1562</td>\n",
+       "      <td>Yamato Nadeshiko Shichihenge♥</td>\n",
+       "      <td>[Comedy,  Shoujo]</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1626918</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>1735</td>\n",
+       "      <td>Naruto: Shippuuden</td>\n",
+       "      <td>[Action,  Adventure,  Comedy,  Super Power,  M...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>6</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1626919</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>228</td>\n",
+       "      <td>Jigoku Shoujo</td>\n",
+       "      <td>[Mystery,  Horror,  Psychological,  Supernatural]</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1626920 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                username  anime_id                          title  \\\n",
+       "0        --FallenAngel--       164                  Mononoke Hime   \n",
+       "1        --FallenAngel--      5507             Senjou no Valkyria   \n",
+       "2        --FallenAngel--       585               Mimi wo Sumaseba   \n",
+       "3        --FallenAngel--       513         Tenkuu no Shiro Laputa   \n",
+       "4        --FallenAngel--     10800                    Chihayafuru   \n",
+       "...                  ...       ...                            ...   \n",
+       "1626915              zzs      1498           Black Blood Brothers   \n",
+       "1626916              zzs      1313           Digimon Adventure 02   \n",
+       "1626917              zzs      1562  Yamato Nadeshiko Shichihenge♥   \n",
+       "1626918              zzs      1735             Naruto: Shippuuden   \n",
+       "1626919              zzs       228                  Jigoku Shoujo   \n",
+       "\n",
+       "                                                     genre   type  my_score  \\\n",
+       "0                           [Action,  Adventure,  Fantasy]  Movie        10   \n",
+       "1                            [Action,  Military,  Romance]     TV        10   \n",
+       "2               [Slice of Life,  Drama,  Romance,  Shoujo]  Movie        10   \n",
+       "3                 [Adventure,  Fantasy,  Romance,  Sci-Fi]  Movie        10   \n",
+       "4        [Drama,  Game,  Josei,  School,  Slice of Life...     TV        10   \n",
+       "...                                                    ...    ...       ...   \n",
+       "1626915  [Action,  Comedy,  Fantasy,  Shounen,  Superna...     TV         7   \n",
+       "1626916  [Action,  Adventure,  Comedy,  Drama,  Fantasy...     TV         6   \n",
+       "1626917                                  [Comedy,  Shoujo]     TV         6   \n",
+       "1626918  [Action,  Adventure,  Comedy,  Super Power,  M...     TV         6   \n",
+       "1626919  [Mystery,  Horror,  Psychological,  Supernatural]     TV         6   \n",
+       "\n",
+       "         my_watched_episodes  aired_from_year time_period  mean_score  \n",
+       "0                          1             1997     Classic        8.41  \n",
+       "1                         26             2009     Classic        8.41  \n",
+       "2                          1             1995     Classic        8.41  \n",
+       "3                          1             1986     Classic        8.41  \n",
+       "4                         25             2011     New-Gen        8.41  \n",
+       "...                      ...              ...         ...         ...  \n",
+       "1626915                   12             2006     Classic        7.57  \n",
+       "1626916                   50             2000     Classic        7.57  \n",
+       "1626917                   25             2006     Classic        7.57  \n",
+       "1626918                   68             2007     Classic        7.57  \n",
+       "1626919                   26             2005     Classic        7.57  \n",
+       "\n",
+       "[1626920 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Dataframe of ratings that includes all ratings from users instead of just top 10\n",
     "collab_frame = collab_frame.loc[collab_frame[\"my_score\"]>0, [\"username\", \"anime_id\",\"title\",\"genre\",\"type\", \"my_score\", \"my_watched_episodes\", \"aired_from_year\", \"time_period\"]]  \n",
@@ -844,7 +1074,13 @@
     "\n",
     "collab_frame.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "collab_frame.to_csv(r\"D:\\dataset\\encoding\\collab_frame.csv\", index = False)"
+    "for u in collab_frame.groupby(\"username\"):\n",
+    "    mean = float(users.loc[users[\"username\"]==u[0]][\"stats_mean_score\"])\n",
+    "    #Adding mean score column to ratings dataframe so scores can be normalised\n",
+    "    collab_frame.loc[collab_frame[\"username\"]==u[0], \"mean_score\"] = mean\n",
+    "    #print(u[1])\n",
+    "collab_frame.to_csv(r\"D:\\dataset\\encoding\\collab_frame.csv\", index = False)\n",
+    "collab_frame"
    ]
   }
  ],
