Collaborative filtering matrix complete

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -827,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Collaborative filtering (Ratings)"
+    "Collaborative filtering Ratings dataframe"
    ]
   },
   {
