collaborative filtering finished (no evaluation)

--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -256,8 +256,7 @@
     "\n",
     "rating_matrix.to_csv(r\"D:\\dataset\\encoding\\collab_scores.csv\", index = False)\n",
     "rating_matrix\n",
-    "#extra_features\n",
-    "#3240 rows\n"
+    "#extra_features\n"
    ]
   }
  ],
