--- a/neighbours.ipynb
+++ b/neighbours.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -493,89 +493,89 @@
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6859</th>\n",
-       "      <td>9191</td>\n",
-       "      <td>HinaMika</td>\n",
-       "      <td>136</td>\n",
-       "      <td>6.55</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>3171</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Drama', 'Adventure', 'Comedy']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4079</th>\n",
-       "      <td>93577</td>\n",
-       "      <td>Igemona</td>\n",
-       "      <td>157</td>\n",
-       "      <td>7.14</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>3195</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Adventure', 'Drama', 'Comedy']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6037</th>\n",
-       "      <td>365694</td>\n",
-       "      <td>Heiko92</td>\n",
-       "      <td>459</td>\n",
-       "      <td>7.93</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>8799</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>['Drama', 'Comedy', 'Adventure']</td>\n",
-       "      <td>Classic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4089</th>\n",
-       "      <td>108852</td>\n",
-       "      <td>Guro-tan</td>\n",
-       "      <td>52</td>\n",
-       "      <td>6.71</td>\n",
+       "      <th>3756</th>\n",
+       "      <td>380488</td>\n",
+       "      <td>Harmony_</td>\n",
+       "      <td>41</td>\n",
+       "      <td>7.71</td>\n",
        "      <td>Newbie</td>\n",
        "      <td>Female</td>\n",
-       "      <td>1989</td>\n",
-       "      <td>1063</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>1619</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>['Comedy', 'Adventure', 'Drama']</td>\n",
+       "      <td>['Adventure', 'Action', 'Drama']</td>\n",
        "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8501</th>\n",
+       "      <td>4568002</td>\n",
+       "      <td>Harish123uzumaki</td>\n",
+       "      <td>134</td>\n",
+       "      <td>7.76</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>4473</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>['Shounen', 'Adventure', 'Drama']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9092</th>\n",
+       "      <td>65855</td>\n",
+       "      <td>Harima_Kenji</td>\n",
+       "      <td>92</td>\n",
+       "      <td>7.26</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>3204</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Adventure', 'Comedy', 'Sci-Fi']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2244</th>\n",
+       "      <td>3547033</td>\n",
+       "      <td>Haroun_SMIDA</td>\n",
+       "      <td>343</td>\n",
+       "      <td>7.07</td>\n",
+       "      <td>Veteran</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>7978</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Shounen', 'Comedy', 'Mystery']</td>\n",
+       "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     user_id    username user_completed  stats_mean_score experience  gender  \\\n",
-       "6995  233922  Harmleikur            170              8.09    Regular  Female   \n",
-       "6859    9191    HinaMika            136              6.55    Regular  Female   \n",
-       "4079   93577     Igemona            157              7.14    Regular  Female   \n",
-       "6037  365694     Heiko92            459              7.93    Veteran  Female   \n",
-       "4089  108852    Guro-tan             52              6.71     Newbie  Female   \n",
+       "      user_id          username user_completed  stats_mean_score experience  \\\n",
+       "6995   233922        Harmleikur            170              8.09    Regular   \n",
+       "3756   380488          Harmony_             41              7.71     Newbie   \n",
+       "8501  4568002  Harish123uzumaki            134              7.76    Regular   \n",
+       "9092    65855      Harima_Kenji             92              7.26    Regular   \n",
+       "2244  3547033      Haroun_SMIDA            343              7.07    Veteran   \n",
        "\n",
-       "     birth_date stats_episodes  generation                        fav_genres  \\\n",
-       "6995       1992           4256  Millenials  ['Drama', 'Comedy', 'Adventure']   \n",
-       "6859       1992           3171  Millenials  ['Drama', 'Adventure', 'Comedy']   \n",
-       "4079       1990           3195  Millenials  ['Adventure', 'Drama', 'Comedy']   \n",
-       "6037       1992           8799  Millenials  ['Drama', 'Comedy', 'Adventure']   \n",
-       "4089       1989           1063  Millenials  ['Comedy', 'Adventure', 'Drama']   \n",
+       "      gender birth_date stats_episodes  generation  \\\n",
+       "6995  Female       1992           4256  Millenials   \n",
+       "3756  Female       1985           1619  Millenials   \n",
+       "8501    Male       1997           4473       Gen Z   \n",
+       "9092    Male       1981           3204  Millenials   \n",
+       "2244    Male       1991           7978  Millenials   \n",
        "\n",
-       "     fav_anime_period  \n",
-       "6995          Classic  \n",
-       "6859          Classic  \n",
-       "4079          Classic  \n",
-       "6037          Classic  \n",
-       "4089          Classic  "
+       "                             fav_genres fav_anime_period  \n",
+       "6995   ['Drama', 'Comedy', 'Adventure']          Classic  \n",
+       "3756   ['Adventure', 'Action', 'Drama']          Classic  \n",
+       "8501  ['Shounen', 'Adventure', 'Drama']          Classic  \n",
+       "9092  ['Adventure', 'Comedy', 'Sci-Fi']          Classic  \n",
+       "2244   ['Shounen', 'Comedy', 'Mystery']          New-Gen  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
     "#function that returns a list of indexes of most similar users in \"final_arrays\" array\n",
     "def neighbours(user):\n",
     "    #user = np.array([7537, 0, 0, 2, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-    "    nc = NearestNeighbors(n_neighbors = 5, metric=\"cosine\") #euclidean\n",
+    "    nc = NearestNeighbors(n_neighbors = 5, metric=\"euclidean\") #euclidean\n",
     "    #maybe add some weightings\n",
     "    train = nc.fit(final_arrays) #fit the model with the user vector data (training)\n",
     "    n = train.kneighbors([user], return_distance = False)\n",
@@ -632,16 +632,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[30276, 11665, 10162, 1293, 245]"
+       "[30276, 486, 1735, 237, 1535]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,6 +696,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_fav_genres = set(eval(users.loc[users[\"username\"]==\"karthiga\"][\"fav_genres\"][0]))\n",
+    "user_fav_genres\n",
+    "\n",
+    "a_genres = list(anime.loc[anime[\"title\"]==\"Junjou Romantica 2\"][\"genre\"])\n",
+    "a_genres = a_genres[0].split(\",\")\n",
+    "a_genres = set([x.strip() for x in a_genres])\n",
+    "len(user_fav_genres.intersection(a_genres))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -730,6 +756,7 @@
     "        #print([user[0]])\n",
     "        username = t.inverse_transform([user[0]])[0]\n",
     "        #print(username)\n",
+    "        user_fav_genres = set(eval(users.loc[users[\"username\"]==username][\"fav_genres\"][0]))\n",
     "        user_neighbours = neighbours(user)\n",
     "        nframe = sim_frame(user_neighbours)\n",
     "        #print(user_neighbours)\n",
@@ -744,8 +771,16 @@
     "        shows_watched = 0\n",
     "        #Check whether recommended shows are present in original ratings table\n",
     "        for show in user_recommendations:\n",
-    "            a_id = int(anime.loc[anime[\"title\"]==show][\"anime_id\"])\n",
-    "            #u_ratings = real_ratings.loc[real_ratings[\"username\"]==username]\n",
+    "            a_id = show\n",
+    "            #a_id = int(anime.loc[anime[\"title\"]==show][\"anime_id\"])\n",
+    "\n",
+    "            #Find how many genres in recommended anime are in the user's favourites\n",
+    "            a_genres = list(anime.loc[anime[\"anime_id\"]==a_id][\"genre\"])\n",
+    "            a_genres = a_genres[0].split(\",\")\n",
+    "            a_genres = set([x.strip() for x in a_genres])\n",
+    "\n",
+    "            num_matched_genres = len(user_fav_genres.intersection(a_genres)) #max = 3\n",
+    "            #score+=num_matched_genres\n",
     "            if int(a_id) in list(rt[\"anime_id\"]): #if user watched the recommended show, give 1 point\n",
     "                rating_row = real_ratings.loc[(real_ratings[\"username\"]==username)&(real_ratings[\"anime_id\"]==a_id)]\n",
     "                #print(rating_row)\n",
@@ -755,7 +790,8 @@
     "                    score+=1 #add an extra point to overall score if the user liked the show\n",
     "                    likes+=1\n",
     "\n",
-    "        #max number of points is 2 x number of neighbours (k): 10\n",
+    "        #max number of points is 2 x number of neighbours (k): 10 + max amount fo matched genres (3)\n",
+    "        #max_score = 13\n",
     "        num_likes.append(likes)\n",
     "        overall_scores.append(score)\n",
     "        num_shows_watched.append(shows_watched)\n",
@@ -774,10 +810,22 @@
     "    print(f\"Average overall recommendation score for Test users: {avg_score} | Standard deviation: {np.std(overall_scores)}\")\n",
     "    print(f\"Average number of recommended shows that users have watched before: {avg_shows_watched} | Standard deviation: {np.std(num_shows_watched)}\")\n",
     "    print(f\"Average number of recommended anime that users liked: {avg_likes} | Standard deviation: {np.std(num_likes)}\")\n",
-    "    return avg_score, avg_shows_watched, avg_likes\n",
+    "    return overall_scores, num_likes, num_shows_watched, avg_score, avg_shows_watched, avg_likes\n",
     "\n",
-    "evaluate_users() #147minutes\n",
+    "results = evaluate_users() #147minutes\n",
     "#include analysis of distance metric between neighbours e.g. cosine, euclidean "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "scores = results[0]\n",
+    "x = list(range(1, len(scores)+1))"
    ]
   },
   {
