--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,16 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3613\n",
-      "104869\n",
-      "9302\n"
+      "Number of users before: 104869\n",
+      "Number of users after: 9302\n"
      ]
     }
    ],
@@ -54,15 +53,15 @@
     "af = af.loc[af[\"type\"].isin([\"TV\",\"Movie\"]) & (~af[\"rating\"].isin([\"Rx - Hentai\", \"R+ - Mild Nudity\"]))] #only include TV shows and Movies and remove nsfw shows\n",
     "uf = users.loc[:, [\"user_id\", \"username\", \"user_completed\", \"stats_mean_score\", \"user_days_spent_watching\", \"gender\", \"birth_date\", \"stats_episodes\"]]\n",
     "uf[\"birth_date\"] = pd.to_datetime(uf[\"birth_date\"])\n",
-    "print(len(af))\n",
+    "#print(len(af))\n",
     "#Only include users who have completed at least 5 anime\n",
     "uf = uf[uf[\"user_completed\"] >= 5]\n",
     "\n",
     "#print(len(rf.groupby(\"username\")))\n",
     "rf = rf[rf[\"username\"].isin(uf[\"username\"])] #ensure that only ratings from users that are in the users dataframe are included\n",
-    "print(len(uf))\n",
+    "print(f\"Number of users before: {len(uf)}\")\n",
     "uf = uf[uf[\"username\"].isin(rf[\"username\"])] #ensure that only users that have ratings in the ratings dataframe are included\n",
-    "print(len(uf))"
+    "print(f\"Number of users after: {len(uf)}\")"
    ]
   },
   {
